<resources>
    <string name="app_name">TianYuan</string>

    <string name="login_by_account">账号登录</string>
    <string name="login_quickly">快速登录</string>
    <string name="please_input_phone_num">请输入手机号</string>
    <string name="please_input_login_pwd">请输入密码</string>
    <string name="please_input_login_pwd_again">请再次输入密码</string>
    <string name="please_input_security_code">验证码</string>
    <string name="security_code">获取验证码</string>
    <string name="login">登 录</string>
    <string name="register">注 册</string>
    <string name="commit">确 定</string>
    <string name="cancel">取 消</string>
    <string name="modify">编辑</string>
    <string name="delete">删除</string>
    <string name="back">返回</string>
    <string name="next_step">下一步</string>
    <string name="cancel_no_gap">取消</string>
    <string name="commit_no_gap">确定</string>
    <string name="save">保存</string>
    <string name="skip">跳过</string>
    <string name="home">家</string>
    <string name="company">公司</string>
    <string name="click_and_register">点击注册</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="find_pwd">找回密码</string>
    <string name="apply_security_code_delay">%1$d秒</string>
    <string name="apply_security_code">验证码</string>
    <string name="i_knew">我知道了</string>
    <string name="modify_pwd">修改密码</string>
    <string name="auth_identity">身份认证</string>
    <string name="weather_temperture">%1$s°</string>

    <!-- 商城主界面相关字符串 -->
    <string name="tab_item_home_">商城</string>
    <string name="tab_item_category_">分类</string>
    <string name="tab_item_shopcart_">购物车</string>
    <string name="tab_item_mine_">我的</string>

    <string name="text_item_category">分类</string>
    <string name="text_item_shopcatd">购物车</string>
    <string name="text_item_order">订单</string>
    <string name="text_item_coupon">优惠券</string>


    <string name="shoppingcat">购物车</string>
    <string name="actionBar_edit">编辑</string>
    <string name="all">全选</string>
    <string name="order_total">合计 :</string>

    <string name="pwd_err_defult">密码错误</string>
    <string name="pwd_err_include_special">密码不能包含特殊字符</string>
    <string name="pwd_err_no_lower">密码需要包含小写字母</string>
    <string name="pwd_err_no_upper">密码需要包含大写字母</string>
    <string name="pwd_err_no_num">密码需要包含数字</string>
    <string name="pwd_err_len">密码长度为8～16位</string>
    <string name="pwd_err_not_same">密码输入不一致</string>

    <!--register-->
    <string name="register_succ">恭喜您注册成功！</string>
    <string name="register_succ_comment">账户在未通过实名认证前所有功能都暂时无法使用，您的个人中心也将暂时处于冻结状态，所以强烈建议您马上进行实名认证哦！</string>
    <string name="real_name_auth_now">马上进行实名认证</string>
    <string name="reg_pwd_rule">密码包含大小写字母以及数字8～16位</string>



    <!--user-->
    <string name="user_center">个人中心</string>
    <string name="user_fn_my_info">我的信息</string>
    <string name="user_fn_about_us">关于我们</string>
    <string name="user_fn_normal_question">常见问题</string>
    <string name="user_fn_logout">退出登录</string>
    <string name="user_tab_info">个人信息</string>
    <string name="user_tab_contacts">紧急联系人</string>
    <string name="user_tab_emergency_setting">应急设置</string>
    <string name="user_tab_member">会员服务</string>
    <string name="user_tab_device_statue">设备状态</string>
    <string name="user_costomer_service_phone">客服24小时热线电话:400-600-4723</string>
    <string name="user_app_version">版本:&#160;&#160;%1$s</string>
    <!-- user account-->
    <string name="user_account_info">个人资料</string>
    <string name="user_account">账号</string>
    <string name="user_header">头像</string>
    <string name="user_register_date">注册日期</string>
    <string name="user_hardware_date">安装日期</string>
    <string name="user_vip_valid_date">会员有效期</string>
    <string name="user_vip_valid_date_to">至%1$s</string>

    <!--user addr-->
    <string name="user_vip_my_addr">我的地址</string>
    <string name="user_vip_apply_detector">申请设备</string>
    <string name="user_vip_add_detector">添加设备</string>
    <string name="user_vip_my_detector">已添加设备</string>
    <string name="user_vip_my_apply_detector">已申请设备</string>
    <string name="user_addr_click_add">点击添加新的地址</string>
    <string name="user_detector_click_add">点击添加新的智能设备</string>
    <string name="user_add_addr">添加地址</string>
    <string name="user_modify_addr">修改地址</string>


    <!--user reset pwd-->
    <string name="user_reset_pwd">重置密码</string>
    <string name="user_reset_enter_old_pwd">请输入开锁密码，完成身份验证</string>
    <string name="user_reset_enter_new_pwd">请设置新的开锁密码</string>
    <string name="user_reset_enter_new_pwd_again">请再次输入密码</string>
    <string name="user_reset_enter_new_pwd_not_same">开锁密码不能重复，连续的数字</string>

    <!--user apply hardware-->
    <string name="user_apply_name">姓&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;名:</string>
    <string name="user_apply_phone">手机号码:</string>
    <string name="user_apply_location">地&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;址:</string>


    <!--reg more info-->
    <string name="more_info">补充信息</string>
    <string name="more_info_content">为了更好的保护所有用户的生命财产安全，我平台为所有注册用户提供免费的联动报警服务，请仔细填写您的住宅地址，以便我们快速准确的将您附近的警情及时推送给您</string>
    <string name="more_info_notify">此地址将作为我们为您提供联动报警服务时的默认地址，强烈建议您填写正确的家庭住址。</string>
    <string name="more_info_name">姓&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;名:</string>
    <string name="more_info_name_hint">请输入您的名字</string>
    <string name="more_info_addr">地&#160;&#160;&#160;&#160;&#160;&#160;址:</string>
    <string name="more_info_addr_hint">请选择所在区域</string>
    <string name="more_info_detail_addr">详细地址:</string>
    <string name="more_info_detail_addr_hint">请填写座数</string>

    <string name="hd_install_addr">安装地址:</string>
    <string name="hd_install_addr_hint">请选择安装地址</string>
    <string name="hd_install_location">安装位置:</string>
    <string name="hd_install_location_hint">请填写安装位置</string>
    <string name="hd_install_nick_name">名&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;称:</string>
    <string name="hd_install_nick_name_hint">请填写设备名称</string>
    <string name="hd_install_succ">硬件添加成功</string>

</resources>
