<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_layout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login_reg"
    android:fitsSystemWindows="true"
    >

    <TextView
        android:id="@+id/phone_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FF0000"
        android:text="@string/phone_size"
        />
    
    <ImageView
        android:layout_width="@dimen/x340"
        android:layout_height="@dimen/y113"
        android:background="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/y115" />

    <TextView
        android:id="@+id/login_type_base"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/y335"
        android:layout_centerHorizontal="true"
        android:text="/"
        android:textColor="@color/color_text"
        android:textSize="@dimen/textsize_sp_20"
        />

    <TextView
        android:id="@+id/login_by_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/login_type_base"
        android:layout_alignBottom="@+id/login_type_base"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="@dimen/x10"
        android:text="@string/login_by_account"
        android:textColor="@color/color_text"
        android:textSize="@dimen/textsize_sp_20"
        />

    <TextView
        android:id="@+id/login_quickly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/login_type_base"
        android:layout_alignBottom="@+id/login_type_base"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/x10"
        android:text="@string/login_quickly"
        android:textColor="@color/color_text"
        android:textSize="@dimen/textsize_sp_20"
        />

    <RelativeLayout
        android:id="@+id/layout_phone"
        android:layout_width="@dimen/x453"
        android:layout_height="@dimen/y72"
        android:background="@drawable/item_cornor_shape"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/login_type_base"
        android:layout_marginTop="@dimen/y57"
        >
        <ImageView
            android:layout_width="@dimen/x29"
            android:layout_height="@dimen/y29"
            android:src="@drawable/login_account"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x30"
        />
        <EditText
            android:id="@+id/login_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x72"
            android:inputType="number"
            android:textSize="@dimen/textsize_sp_18"
            android:background="@null"
            android:maxLines="1"
            android:maxLength="11"
            android:textColor="@color/color_text"
            android:textColorHint="@color/color_text_hint"
            android:hint="@string/please_input_phone_num"
            android:text="13641983451"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/login_layout_pwd"
        android:visibility="visible"
        android:layout_width="@dimen/x453"
        android:layout_height="@dimen/y72"
        android:background="@drawable/item_cornor_shape"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/layout_phone"
        android:layout_marginTop="@dimen/y29"
        >
        <ImageView
            android:layout_width="@dimen/x29"
            android:layout_height="@dimen/y29"
            android:src="@drawable/login_pwd"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x30"
            />
        <EditText
            android:id="@+id/login_pwd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x72"
            android:inputType="textPassword"
            android:maxLines="1"
            android:maxLength="20"
            android:textSize="@dimen/textsize_sp_18"
            android:background="@null"
            android:textColor="@color/color_text"
            android:textColorHint="@color/color_text_hint"
            android:hint="@string/please_input_login_pwd"
            android:text="123QWEasd"
            />

        <ImageView
            android:id="@+id/login_show_pwd"
            android:layout_width="@dimen/x32"
            android:layout_height="@dimen/y20"
            android:src="@drawable/login_pwd_show"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/x30"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/login_layout_security_code"
        android:visibility="gone"
        android:layout_width="@dimen/x453"
        android:layout_height="@dimen/y72"
        android:background="@drawable/item_cornor_shape"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/layout_phone"
        android:layout_marginTop="@dimen/y29"
        >
        <ImageView
            android:layout_width="@dimen/x29"
            android:layout_height="@dimen/y29"
            android:src="@drawable/login_security"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x30"
            />
        <EditText
            android:id="@+id/login_security_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x72"
            android:inputType="number"
            android:textSize="@dimen/textsize_sp_18"
            android:background="@null"
            android:maxLength="4"
            android:maxLines="1"
            android:textColor="@color/color_text"
            android:textColorHint="@color/color_text_hint"
            android:hint="@string/please_input_security_code"
            android:text="1234"
            />
        <Button
            android:id="@+id/login_apply_security_code"
            android:layout_width="@dimen/x94"
            android:layout_height="@dimen/y39"
            android:background="@drawable/bg_btn_selector"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/x30"
            android:text="@string/apply_security_code"
            android:textColor="@color/color_text_blue"
            android:textSize="@dimen/textsize_sp_12"
            />
    </RelativeLayout>

    <Button
        android:id="@+id/login_commit"
        android:layout_width="@dimen/x453"
        android:layout_height="@dimen/y72"
        android:background="@drawable/bg_btn_selector"
        android:layout_below="@id/layout_phone"
        android:layout_marginTop="@dimen/y129"
        android:layout_centerHorizontal="true"
        android:text="@string/login"
        android:textSize="@dimen/textsize_sp_18"
        android:textColor="@color/color_btn_text"
        />

    <TextView
        android:id="@+id/login_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_commit"
        android:layout_alignLeft="@id/login_commit"
        android:layout_marginTop="@dimen/x28"
        android:text="@string/click_and_register"
        android:textColor="@color/color_text"
        android:textSize="@dimen/textsize_sp_18"
        />

    <TextView
        android:id="@+id/login_forget_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_commit"
        android:layout_alignRight="@id/login_commit"
        android:layout_marginTop="@dimen/x28"
        android:text="@string/forget_pwd"
        android:textColor="@color/color_text"
        android:textSize="@dimen/textsize_sp_18"
        />

</RelativeLayout>
