<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/background_page">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        >

        <TextView
            android:id="@+id/toast_check_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:maxLines="1"
            android:textColor="@color/color_text"
            android:textSize="@dimen/textsize_sp_20"
            android:text="@string/delete"
            />

        <TextView
            android:id="@+id/toast_check_context"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/x58"
            android:layout_marginLeft="@dimen/x58"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/y72"
            android:textColor="@color/color_text"
            android:textSize="@dimen/textsize_sp_16"
            android:text="@string/modify"
            />

        <Button
            android:id="@+id/toast_check_positive"
            android:layout_below="@id/toast_check_context"
            android:layout_width="@dimen/x352"
            android:layout_height="@dimen/y50"
            android:layout_marginTop="@dimen/y48"
            android:layout_centerHorizontal="true"
            android:text="@string/commit"
            android:textColor="@color/color_text"
            android:textSize="@dimen/textsize_sp_16"
            android:background="@drawable/wd_btn_selector"
            />
    </RelativeLayout>


    <ImageView
        android:id="@+id/close"
        android:layout_width="@dimen/x58"
        android:layout_height="@dimen/y58"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/y72"
        android:src="@drawable/door_cancel" />

</RelativeLayout>
