<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg_login_reg"
    android:fitsSystemWindows="true"
    tools:context=".user.addr.update.UpdateAddrActivity">

    <include layout="@layout/block_toolbar"/>
    
    <LinearLayout
        android:layout_width="@dimen/x497"
        android:layout_height="@dimen/y229"
        android:background="@drawable/win_transparency_10"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/y118"
        android:orientation="vertical"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/y67">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/x21"
                android:textColor="@color/color_text"
                android:textSize="@dimen/textsize_sp_16"
                android:text="@string/more_info_addr"
                />
            <TextView
                android:id="@+id/addr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/x141"
                android:layout_marginRight="@dimen/x42"
                android:textColor="@color/color_text"
                android:maxLines="1"
                android:textSize="@dimen/textsize_sp_16"
                android:background="@null"
                android:textColorHint="@color/color_text_hint_20"
                android:hint="@string/more_info_addr_hint"
                />
            <ImageView
                android:layout_width="@dimen/x51"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:padding="@dimen/x20"
                android:src="@drawable/icon_enter"
                android:onClick="goMap"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/y1"
                android:background="@color/color_text"
                android:alpha="0.1"
                android:layout_alignParentBottom="true"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/y67">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/x21"
                android:textColor="@color/color_text"
                android:textSize="@dimen/textsize_sp_16"
                android:text="@string/more_info_detail_addr"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="14dp" />
            <EditText
                android:id="@+id/detail_addr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/x141"
                android:layout_marginRight="@dimen/x32"
                android:textColor="@color/color_text"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="@dimen/textsize_sp_16"
                android:background="@null"
                android:textColorHint="@color/color_text_hint_20"
                android:hint="@string/more_info_detail_addr_hint"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/y1"
                android:background="@color/color_text"
                android:alpha="0.1"
                android:layout_alignParentBottom="true"
                />
        </RelativeLayout>







        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/commit"
                android:layout_width="@dimen/x352"
                android:layout_height="@dimen/y50"
                android:layout_centerInParent="true"
                android:background="@drawable/wd_btn_selector"
                android:textColor="@color/color_text"
                android:textSize="@dimen/textsize_sp_18"
                android:text="@string/commit"
                android:onClick="commit"
                />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>