<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_layout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login_reg"
    android:fitsSystemWindows="true"
    >
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/y14"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textsize_sp_22"
            android:textColor="@color/color_text"
            android:text="@string/find_pwd"
            android:gravity="center"
            android:padding="0dp"
            android:layout_centerInParent="true"
            />

        <ImageView
            android:id="@+id/forget_pwd_back"
            android:layout_width="@dimen/x35"
            android:layout_height="@dimen/y29"
            android:paddingLeft="@dimen/x10"
            android:paddingRight="@dimen/x10"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_back"
            android:layout_marginLeft="@dimen/x12"
            />
    </RelativeLayout>
    
    <ImageView
        android:layout_width="@dimen/x340"
        android:layout_height="@dimen/y113"
        android:layout_marginTop="@dimen/y94"
        android:layout_centerHorizontal="true"
        android:background="@drawable/logo"
        />

    <RelativeLayout
        android:id="@+id/forget_pwd_layout_phone"
        android:layout_width="@dimen/x453"
        android:layout_height="@dimen/y72"
        android:background="@drawable/item_cornor_shape"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/y316"
        >
        <ImageView
            android:layout_width="@dimen/x29"
            android:layout_height="@dimen/x29"
            android:src="@drawable/login_account"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x30"
        />
        <EditText
            android:id="@+id/forget_pwd_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x72"
            android:inputType="number"
            android:textSize="@dimen/textsize_sp_18"
            android:background="@null"
            android:maxLines="1"
            android:maxLength="11"
            android:textColor="@color/color_text"
            android:textColorHint="@color/color_text_hint"
            android:hint="@string/please_input_phone_num"
            android:text="13641983451"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/forget_pwd_layout_security_code"
        android:layout_width="@dimen/x453"
        android:layout_height="@dimen/y72"
        android:background="@drawable/item_cornor_shape"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/forget_pwd_layout_phone"
        android:layout_marginTop="@dimen/y29"
        >
        <ImageView
            android:layout_width="@dimen/x29"
            android:layout_height="@dimen/y29"
            android:src="@drawable/login_security"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x30"
            />
        <EditText
            android:id="@+id/forget_pwd_security_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x72"
            android:inputType="number"
            android:textSize="@dimen/textsize_sp_18"
            android:background="@null"
            android:maxLength="4"
            android:maxLines="1"
            android:textColor="@color/color_text"
            android:textColorHint="@color/color_text_hint"
            android:hint="@string/please_input_security_code"
            android:text="1234"
            />
        <Button
            android:id="@+id/forget_pwd_apply_security_code"
            android:layout_width="@dimen/x94"
            android:layout_height="@dimen/y39"
            android:background="@drawable/bg_btn_selector"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/x30"
            android:text="@string/apply_security_code"
            android:textColor="@color/color_text_blue"
            android:textSize="@dimen/textsize_sp_12"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/forget_pwd_layout_pwd"
        android:layout_width="@dimen/x453"
        android:layout_height="@dimen/y72"
        android:background="@drawable/item_cornor_shape"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/forget_pwd_layout_security_code"
        android:layout_marginTop="@dimen/y29"
        >
        <ImageView
            android:layout_width="@dimen/x29"
            android:layout_height="@dimen/y29"
            android:src="@drawable/login_pwd"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x30"
            />
        <EditText
            android:id="@+id/forget_pwd_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x72"
            android:inputType="textPassword"
            android:maxLines="1"
            android:maxLength="20"
            android:textSize="@dimen/textsize_sp_18"
            android:background="@null"
            android:textColor="@color/color_text"
            android:textColorHint="@color/color_text_hint"
            android:hint="@string/please_input_login_pwd"
            android:text="123QWEasd"
            />

        <ImageView
            android:id="@+id/forget_pwd_show_pwd"
            android:layout_width="@dimen/x32"
            android:layout_height="@dimen/y20"
            android:src="@drawable/login_pwd_show"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/x30"
            />
    </RelativeLayout>

    <Button
        android:id="@+id/forget_pwd_commit"
        android:layout_width="@dimen/x453"
        android:layout_height="@dimen/y72"
        android:background="@drawable/bg_btn_selector"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/forget_pwd_layout_pwd"
        android:layout_marginTop="@dimen/y29"
        android:text="@string/commit"
        android:textSize="@dimen/textsize_sp_20"
        android:textColor="@color/color_btn_text"
        />

</RelativeLayout>
